--- a/column-transformer.ipynb
+++ b/column-transformer.ipynb
@@ -428,29 +428,298 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "transformer=ColumnTransformer(transformers=[\n",
     "    (\"tnf1\", SimpleImputer(), [\"fever\"]),\n",
-    "    (\"tnf2\", OrdinalEncoder(categories=[[\"Mild\",\"Stroong\"]]), ['cough']),\n",
+    "    (\"tnf2\", OrdinalEncoder(categories=[[\"Mild\",\"Strong\"]]), ['cough']),\n",
     "    (\"tnf3\", OneHotEncoder(sparse_output=False, drop=\"first\"), [\"gender\",\"city\"])\n",
     "], remainder=\"passthrough\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[100.90277778,   1.        ,   0.        ,   0.        ,\n",
+       "          0.        ,   1.        ,  20.        ],\n",
+       "       [100.        ,   0.        ,   1.        ,   0.        ,\n",
+       "          1.        ,   0.        ,  27.        ],\n",
+       "       [ 99.        ,   0.        ,   0.        ,   0.        ,\n",
+       "          0.        ,   0.        ,  22.        ],\n",
+       "       [100.        ,   0.        ,   1.        ,   1.        ,\n",
+       "          0.        ,   0.        ,  27.        ],\n",
+       "       [100.90277778,   0.        ,   1.        ,   0.        ,\n",
+       "          1.        ,   0.        ,  82.        ],\n",
+       "       [101.        ,   1.        ,   0.        ,   0.        ,\n",
+       "          1.        ,   0.        ,  51.        ],\n",
+       "       [103.        ,   0.        ,   0.        ,   0.        ,\n",
+       "          1.        ,   0.        ,  48.        ],\n",
+       "       [101.        ,   0.        ,   1.        ,   1.        ,\n",
+       "          0.        ,   0.        ,  42.        ],\n",
+       "       [ 99.        ,   0.        ,   1.        ,   0.        ,\n",
+       "          0.        ,   0.        ,  72.        ],\n",
+       "       [101.        ,   1.        ,   1.        ,   0.        ,\n",
+       "          0.        ,   0.        ,  14.        ],\n",
+       "       [100.        ,   0.        ,   0.        ,   0.        ,\n",
+       "          1.        ,   0.        ,  19.        ],\n",
+       "       [ 98.        ,   1.        ,   0.        ,   0.        ,\n",
+       "          0.        ,   1.        ,  81.        ],\n",
+       "       [ 98.        ,   0.        ,   0.        ,   0.        ,\n",
+       "          1.        ,   0.        ,  26.        ],\n",
+       "       [ 99.        ,   1.        ,   1.        ,   0.        ,\n",
+       "          0.        ,   0.        ,  66.        ],\n",
+       "       [100.90277778,   1.        ,   0.        ,   0.        ,\n",
+       "          0.        ,   1.        ,  34.        ],\n",
+       "       [104.        ,   0.        ,   0.        ,   0.        ,\n",
+       "          1.        ,   0.        ,  17.        ],\n",
+       "       [103.        ,   0.        ,   1.        ,   0.        ,\n",
+       "          1.        ,   0.        ,  83.        ],\n",
+       "       [101.        ,   0.        ,   0.        ,   1.        ,\n",
+       "          0.        ,   0.        ,  64.        ],\n",
+       "       [100.        ,   0.        ,   0.        ,   0.        ,\n",
+       "          1.        ,   0.        ,   5.        ],\n",
+       "       [104.        ,   1.        ,   0.        ,   1.        ,\n",
+       "          0.        ,   0.        ,  75.        ],\n",
+       "       [100.        ,   0.        ,   1.        ,   1.        ,\n",
+       "          0.        ,   0.        ,  27.        ],\n",
+       "       [ 98.        ,   0.        ,   1.        ,   0.        ,\n",
+       "          0.        ,   0.        ,  73.        ],\n",
+       "       [ 99.        ,   0.        ,   0.        ,   0.        ,\n",
+       "          0.        ,   1.        ,  60.        ],\n",
+       "       [104.        ,   0.        ,   1.        ,   0.        ,\n",
+       "          1.        ,   0.        ,  51.        ],\n",
+       "       [103.        ,   0.        ,   0.        ,   1.        ,\n",
+       "          0.        ,   0.        ,  73.        ],\n",
+       "       [102.        ,   0.        ,   1.        ,   0.        ,\n",
+       "          0.        ,   0.        ,  64.        ],\n",
+       "       [100.90277778,   0.        ,   0.        ,   1.        ,\n",
+       "          0.        ,   0.        ,  75.        ],\n",
+       "       [ 98.        ,   1.        ,   0.        ,   0.        ,\n",
+       "          1.        ,   0.        ,  71.        ],\n",
+       "       [ 99.        ,   0.        ,   1.        ,   0.        ,\n",
+       "          0.        ,   0.        ,  65.        ],\n",
+       "       [100.        ,   0.        ,   1.        ,   0.        ,\n",
+       "          1.        ,   0.        ,  55.        ],\n",
+       "       [100.90277778,   1.        ,   1.        ,   0.        ,\n",
+       "          1.        ,   0.        ,  71.        ],\n",
+       "       [101.        ,   0.        ,   1.        ,   1.        ,\n",
+       "          0.        ,   0.        ,  19.        ],\n",
+       "       [104.        ,   0.        ,   0.        ,   0.        ,\n",
+       "          0.        ,   0.        ,  12.        ],\n",
+       "       [102.        ,   1.        ,   0.        ,   0.        ,\n",
+       "          1.        ,   0.        ,  82.        ],\n",
+       "       [ 98.        ,   0.        ,   0.        ,   1.        ,\n",
+       "          0.        ,   0.        ,  80.        ],\n",
+       "       [ 98.        ,   0.        ,   0.        ,   0.        ,\n",
+       "          0.        ,   1.        ,  65.        ],\n",
+       "       [102.        ,   1.        ,   0.        ,   0.        ,\n",
+       "          0.        ,   0.        ,  82.        ],\n",
+       "       [ 98.        ,   1.        ,   0.        ,   0.        ,\n",
+       "          0.        ,   1.        ,  69.        ],\n",
+       "       [ 99.        ,   1.        ,   0.        ,   1.        ,\n",
+       "          0.        ,   0.        ,  59.        ],\n",
+       "       [ 98.        ,   1.        ,   1.        ,   0.        ,\n",
+       "          0.        ,   1.        ,  23.        ],\n",
+       "       [ 98.        ,   1.        ,   0.        ,   0.        ,\n",
+       "          1.        ,   0.        ,  10.        ],\n",
+       "       [101.        ,   0.        ,   0.        ,   1.        ,\n",
+       "          0.        ,   0.        ,  49.        ],\n",
+       "       [101.        ,   0.        ,   1.        ,   1.        ,\n",
+       "          0.        ,   0.        ,  15.        ],\n",
+       "       [ 98.        ,   0.        ,   1.        ,   1.        ,\n",
+       "          0.        ,   0.        ,  83.        ],\n",
+       "       [103.        ,   0.        ,   1.        ,   0.        ,\n",
+       "          1.        ,   0.        ,  60.        ],\n",
+       "       [102.        ,   0.        ,   1.        ,   0.        ,\n",
+       "          0.        ,   1.        ,  74.        ],\n",
+       "       [103.        ,   1.        ,   1.        ,   0.        ,\n",
+       "          1.        ,   0.        ,  70.        ],\n",
+       "       [ 98.        ,   0.        ,   0.        ,   0.        ,\n",
+       "          1.        ,   0.        ,  31.        ],\n",
+       "       [ 98.        ,   1.        ,   1.        ,   0.        ,\n",
+       "          1.        ,   0.        ,  34.        ],\n",
+       "       [104.        ,   1.        ,   0.        ,   0.        ,\n",
+       "          1.        ,   0.        ,  54.        ],\n",
+       "       [ 99.        ,   0.        ,   0.        ,   0.        ,\n",
+       "          0.        ,   1.        ,  14.        ],\n",
+       "       [104.        ,   0.        ,   1.        ,   0.        ,\n",
+       "          0.        ,   0.        ,  25.        ],\n",
+       "       [101.        ,   1.        ,   1.        ,   0.        ,\n",
+       "          0.        ,   0.        ,  47.        ],\n",
+       "       [100.        ,   1.        ,   0.        ,   0.        ,\n",
+       "          0.        ,   0.        ,  47.        ],\n",
+       "       [100.90277778,   0.        ,   1.        ,   1.        ,\n",
+       "          0.        ,   0.        ,  38.        ],\n",
+       "       [101.        ,   1.        ,   0.        ,   1.        ,\n",
+       "          0.        ,   0.        ,  34.        ],\n",
+       "       [104.        ,   1.        ,   0.        ,   0.        ,\n",
+       "          0.        ,   0.        ,  56.        ],\n",
+       "       [102.        ,   0.        ,   0.        ,   0.        ,\n",
+       "          0.        ,   0.        ,  69.        ],\n",
+       "       [100.        ,   1.        ,   0.        ,   0.        ,\n",
+       "          1.        ,   0.        ,  13.        ],\n",
+       "       [102.        ,   0.        ,   1.        ,   0.        ,\n",
+       "          1.        ,   0.        ,   5.        ],\n",
+       "       [100.        ,   0.        ,   1.        ,   0.        ,\n",
+       "          0.        ,   0.        ,  11.        ],\n",
+       "       [100.        ,   0.        ,   1.        ,   0.        ,\n",
+       "          0.        ,   0.        ,  10.        ],\n",
+       "       [100.90277778,   1.        ,   0.        ,   0.        ,\n",
+       "          0.        ,   0.        ,  42.        ],\n",
+       "       [100.        ,   1.        ,   0.        ,   0.        ,\n",
+       "          0.        ,   0.        ,  19.        ],\n",
+       "       [101.        ,   0.        ,   0.        ,   0.        ,\n",
+       "          0.        ,   0.        ,  38.        ],\n",
+       "       [103.        ,   0.        ,   0.        ,   0.        ,\n",
+       "          0.        ,   0.        ,  16.        ],\n",
+       "       [104.        ,   0.        ,   0.        ,   0.        ,\n",
+       "          0.        ,   0.        ,  18.        ],\n",
+       "       [102.        ,   0.        ,   0.        ,   1.        ,\n",
+       "          0.        ,   0.        ,  49.        ],\n",
+       "       [104.        ,   0.        ,   1.        ,   0.        ,\n",
+       "          0.        ,   1.        ,  44.        ],\n",
+       "       [100.90277778,   0.        ,   0.        ,   0.        ,\n",
+       "          0.        ,   0.        ,  84.        ],\n",
+       "       [100.        ,   1.        ,   0.        ,   0.        ,\n",
+       "          1.        ,   0.        ,  11.        ],\n",
+       "       [103.        ,   1.        ,   1.        ,   0.        ,\n",
+       "          0.        ,   0.        ,  46.        ],\n",
+       "       [104.        ,   1.        ,   0.        ,   1.        ,\n",
+       "          0.        ,   0.        ,  34.        ],\n",
+       "       [ 99.        ,   0.        ,   1.        ,   1.        ,\n",
+       "          0.        ,   0.        ,  65.        ],\n",
+       "       [102.        ,   1.        ,   1.        ,   1.        ,\n",
+       "          0.        ,   0.        ,  20.        ],\n",
+       "       [104.        ,   0.        ,   1.        ,   0.        ,\n",
+       "          1.        ,   0.        ,  16.        ],\n",
+       "       [104.        ,   0.        ,   1.        ,   0.        ,\n",
+       "          0.        ,   1.        ,  42.        ],\n",
+       "       [104.        ,   0.        ,   0.        ,   0.        ,\n",
+       "          1.        ,   0.        ,   6.        ],\n",
+       "       [ 98.        ,   0.        ,   1.        ,   0.        ,\n",
+       "          1.        ,   0.        ,  24.        ],\n",
+       "       [100.        ,   0.        ,   1.        ,   0.        ,\n",
+       "          0.        ,   0.        ,  80.        ]])"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "transformer.fit_transform(X_train)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[100.90277778,   1.        ,   1.        ,   0.        ,\n",
+       "          1.        ,   0.        ,  79.        ],\n",
+       "       [101.        ,   0.        ,   0.        ,   0.        ,\n",
+       "          1.        ,   0.        ,   8.        ],\n",
+       "       [101.        ,   0.        ,   0.        ,   0.        ,\n",
+       "          1.        ,   0.        ,  83.        ],\n",
+       "       [101.        ,   0.        ,   0.        ,   0.        ,\n",
+       "          0.        ,   1.        ,  19.        ],\n",
+       "       [ 98.        ,   1.        ,   1.        ,   0.        ,\n",
+       "          0.        ,   0.        ,  12.        ],\n",
+       "       [ 98.        ,   1.        ,   0.        ,   1.        ,\n",
+       "          0.        ,   0.        ,  40.        ],\n",
+       "       [104.        ,   0.        ,   1.        ,   0.        ,\n",
+       "          0.        ,   0.        ,  51.        ],\n",
+       "       [102.        ,   1.        ,   0.        ,   1.        ,\n",
+       "          0.        ,   0.        ,  33.        ],\n",
+       "       [101.        ,   0.        ,   0.        ,   0.        ,\n",
+       "          0.        ,   1.        ,  81.        ],\n",
+       "       [101.        ,   0.        ,   0.        ,   0.        ,\n",
+       "          0.        ,   1.        ,  65.        ],\n",
+       "       [100.90277778,   0.        ,   1.        ,   0.        ,\n",
+       "          0.        ,   1.        ,  23.        ],\n",
+       "       [ 98.        ,   1.        ,   0.        ,   0.        ,\n",
+       "          0.        ,   1.        ,   5.        ],\n",
+       "       [102.        ,   1.        ,   0.        ,   0.        ,\n",
+       "          0.        ,   0.        ,  24.        ],\n",
+       "       [101.        ,   0.        ,   0.        ,   0.        ,\n",
+       "          0.        ,   0.        ,  20.        ],\n",
+       "       [ 99.        ,   1.        ,   0.        ,   0.        ,\n",
+       "          1.        ,   0.        ,  25.        ],\n",
+       "       [101.        ,   1.        ,   0.        ,   1.        ,\n",
+       "          0.        ,   0.        ,  68.        ],\n",
+       "       [ 99.        ,   1.        ,   0.        ,   0.        ,\n",
+       "          0.        ,   0.        ,  49.        ],\n",
+       "       [ 98.        ,   0.        ,   0.        ,   0.        ,\n",
+       "          0.        ,   0.        ,  64.        ],\n",
+       "       [103.        ,   0.        ,   0.        ,   0.        ,\n",
+       "          1.        ,   0.        ,  69.        ],\n",
+       "       [103.        ,   0.        ,   0.        ,   0.        ,\n",
+       "          1.        ,   0.        ,  50.        ]])"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "transformer.transform(X_test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
