--- a/incident_sla_breach.ipynb
+++ b/incident_sla_breach.ipynb
@@ -1386,7 +1386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 212,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1420,7 +1420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 213,
    "metadata": {},
    "outputs": [
     {
@@ -1443,7 +1443,7 @@
    ],
    "source": [
     "# Example Prediction\n",
-    "print(predict_sla_breach(\"3 - Moderate\", \"3 - Low\", \"1 - High\", \"Monitoring Event\", \"IO-Network Data Support\", \"Closed\", 10))\n"
+    "print(predict_sla_breach(\"3 - Moderate\", \"3 - Low\", \"1 - High\", \"Monitoring Event\", \"IO-Network Data Support\", \"Closed\", 20))\n"
    ]
   },
   {
@@ -1455,17 +1455,124 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 218,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# from elasticsearch import Elasticsearch\n",
+    "import numpy as np\n",
+    "from datetime import datetime\n",
+    "\n",
+    "# # Connect to Elasticsearch\n",
+    "# es = Elasticsearch([\"http://your-elasticsearch-host:9200\"])  # Update with your ES host\n",
+    "\n",
+    "def fetch_incident_details(ticket_number):\n",
+    "    \"\"\"Fetches incident details from Elasticsearch using the ticket number.\"\"\"\n",
+    "    index_name = \"snow-prd-task*\"  # Your Elasticsearch index\n",
+    "    \n",
+    "    query = {\n",
+    "        \"query\": {\n",
+    "            \"bool\": {\n",
+    "                        \"must\": [\n",
+    "                            \n",
+    "                            {\"match\":{\"number.keyword\": ticket_number}}\n",
+    "                        ]\n",
+    "                    }\n",
+    "            },\n",
+    "        \"_source\": [\n",
+    "            \"priority\", \"impact\", \"urgency\", \"category\",\n",
+    "            \"assignment_group\", \"incident_state\", \"sys_created_on\", \"resolved_at\"\n",
+    "        ]\n",
+    "    }\n",
+    "    \n",
+    "    response = es.search(index=index_name, body=query, size=1)\n",
+    "    \n",
+    "    if response[\"hits\"][\"hits\"]:\n",
+    "        return response[\"hits\"][\"hits\"][0][\"_source\"]\n",
+    "    else:\n",
+    "        return None  # No incident found\n",
+    "\n",
+    "def calculate_ticket_age(creation_time,resolved_at):\n",
+    "    \"\"\"Calculates ticket age in hours from creation time to now.\"\"\"\n",
+    "    try:\n",
+    "        created_time = datetime.strptime(creation_time, \"%Y-%m-%dT%H:%M:%S\")  # Adjust format if needed\n",
+    "        resolved_at = datetime.strptime(resolved_at, \"%Y-%m-%dT%H:%M:%S\")  # Adjust format if needed\n",
+    "        # now = datetime.utcnow()  # Current time in UTC\n",
+    "        ticket_age = (resolved_at - created_time).total_seconds() / 3600  # Convert seconds to hours\n",
+    "        return round(ticket_age, 2)\n",
+    "    except Exception as e:\n",
+    "        print(f\"Error calculating ticket age: {e}\")\n",
+    "        return None\n",
+    "\n",
+    "def predict_sla_breach(ticket_number, model, label_encoders):\n",
+    "    \"\"\"Predicts SLA breach for a given incident ticket number.\"\"\"\n",
+    "    \n",
+    "    # Fetch incident details\n",
+    "    incident = fetch_incident_details(ticket_number)\n",
+    "    if not incident:\n",
+    "        return f\"No incident found for ticket: {ticket_number}\"\n",
+    "    \n",
+    "    # Calculate ticket age\n",
+    "    ticket_age = calculate_ticket_age(incident[\"sys_created_on\"], incident[\"resolved_at\"])\n",
+    "    if ticket_age is None:\n",
+    "        return \"Error in ticket age calculation\"\n",
+    "    \n",
+    "    # Encode categorical features\n",
+    "    try:\n",
+    "        encoded_features = np.hstack([\n",
+    "            label_encoders[col].transform([incident[col]]) for col in [\"priority\", \"impact\", \"urgency\", \"category\", \"assignment_group\", \"incident_state\"]\n",
+    "        ])\n",
+    "        \n",
+    "        # Ensure encoded features are 2D\n",
+    "        encoded_features = np.array(encoded_features).reshape(1, -1)\n",
+    "\n",
+    "        # Ensure ticket_age is a single-element 2D array\n",
+    "        ticket_age_array = np.array([[ticket_age]])\n",
+    "\n",
+    "        # Stack encoded features with ticket age\n",
+    "        input_features = np.hstack((encoded_features, ticket_age_array))\n",
+    "\n",
+    "    except ValueError as e:\n",
+    "        return f\"Encoding error: {e}\"\n",
+    "    \n",
+    "    # Predict SLA breach\n",
+    "    prediction = model.predict(input_features)[0]\n",
+    "    \n",
+    "    return f\"Predicted SLA Breach Time: {prediction} hours\"\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 219,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\surendra.j.kumar\\AppData\\Local\\Temp\\ipykernel_11284\\1361366100.py:27: DeprecationWarning: Received 'size' via a specific parameter in the presence of a 'body' parameter, which is deprecated and will be removed in a future version. Instead, use only 'body' or only specific parameters.\n",
+      "  response = es.search(index=index_name, body=query, size=1)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Predicted SLA Breach Time: 1 hours\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\surendra.j.kumar\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\sklearn\\base.py:493: UserWarning: X does not have valid feature names, but LogisticRegression was fitted with feature names\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(predict_sla_breach(\"INC7381518\", model, label_encoders))"
+   ]
   },
   {
    "cell_type": "code",
