--- a/incident_sla_breach.ipynb
+++ b/incident_sla_breach.ipynb
@@ -1455,7 +1455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 232,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1481,8 +1481,7 @@
     "            },\n",
     "        \"_source\": [\n",
     "            \"priority\", \"impact\", \"urgency\", \"category\",\n",
-    "            \"assignment_group\", \"incident_state\", \"sys_created_on\", \"resolved_at\"\n",
-    "        ]\n",
+    "            \"assignment_group\", \"incident_state\", \"sys_created_on\"        ]\n",
     "    }\n",
     "    \n",
     "    response = es.search(index=index_name, body=query, size=1)\n",
@@ -1492,13 +1491,15 @@
     "    else:\n",
     "        return None  # No incident found\n",
     "\n",
-    "def calculate_ticket_age(creation_time,resolved_at):\n",
+    "from datetime import datetime, timezone\n",
+    "def calculate_ticket_age(creation_time):\n",
     "    \"\"\"Calculates ticket age in hours from creation time to now.\"\"\"\n",
     "    try:\n",
     "        created_time = datetime.strptime(creation_time, \"%Y-%m-%dT%H:%M:%S\")  # Adjust format if needed\n",
-    "        resolved_at = datetime.strptime(resolved_at, \"%Y-%m-%dT%H:%M:%S\")  # Adjust format if needed\n",
-    "        # now = datetime.utcnow()  # Current time in UTC\n",
-    "        ticket_age = (resolved_at - created_time).total_seconds() / 3600  # Convert seconds to hours\n",
+    "        # resolved_at = datetime.strptime(resolved_at, \"%Y-%m-%dT%H:%M:%S\")  # Adjust format if needed\n",
+    "        now1 = datetime.now(timezone.utc).strftime(\"%Y-%m-%dT%H:%M:%S\")  # Timezone-aware UTC datetime\n",
+    "        now = datetime.strptime(now1, \"%Y-%m-%dT%H:%M:%S\")\n",
+    "        ticket_age = (now - created_time).total_seconds() / 3600  # Convert seconds to hours\n",
     "        return round(ticket_age, 2)\n",
     "    except Exception as e:\n",
     "        print(f\"Error calculating ticket age: {e}\")\n",
@@ -1513,24 +1514,28 @@
     "        return f\"No incident found for ticket: {ticket_number}\"\n",
     "    \n",
     "    # Calculate ticket age\n",
-    "    ticket_age = calculate_ticket_age(incident[\"sys_created_on\"], incident[\"resolved_at\"])\n",
+    "    ticket_age = calculate_ticket_age(incident[\"sys_created_on\"])\n",
     "    if ticket_age is None:\n",
     "        return \"Error in ticket age calculation\"\n",
     "    \n",
-    "    # Encode categorical features\n",
+    "    # Extract categorical features\n",
+    "    categorical_features = [\"priority\", \"impact\", \"urgency\", \"category\", \"assignment_group\", \"incident_state\"]\n",
+    "    \n",
+    "    # Encode categorical features safely (handle unseen labels)\n",
     "    try:\n",
-    "        encoded_features = np.hstack([\n",
-    "            label_encoders[col].transform([incident[col]]) for col in [\"priority\", \"impact\", \"urgency\", \"category\", \"assignment_group\", \"incident_state\"]\n",
-    "        ])\n",
+    "        encoded_features = []\n",
+    "        for feature in categorical_features:\n",
+    "            le = label_encoders.get(feature)  # Get the label encoder for the feature\n",
+    "            if le:\n",
+    "                if incident[feature] in le.classes_:\n",
+    "                    encoded_features.append(le.transform([incident[feature]])[0])  # Encode known values\n",
+    "                else:\n",
+    "                    encoded_features.append(len(le.classes_))  # Assign a new index for unseen values\n",
+    "            else:\n",
+    "                return f\"Error: No encoder found for {feature}\"\n",
     "        \n",
-    "        # Ensure encoded features are 2D\n",
-    "        encoded_features = np.array(encoded_features).reshape(1, -1)\n",
-    "\n",
-    "        # Ensure ticket_age is a single-element 2D array\n",
-    "        ticket_age_array = np.array([[ticket_age]])\n",
-    "\n",
-    "        # Stack encoded features with ticket age\n",
-    "        input_features = np.hstack((encoded_features, ticket_age_array))\n",
+    "        # Convert to numpy array and combine with ticket age\n",
+    "        input_features = np.array(encoded_features + [ticket_age]).reshape(1, -1)\n",
     "\n",
     "    except ValueError as e:\n",
     "        return f\"Encoding error: {e}\"\n",
@@ -1543,14 +1548,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": 233,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\surendra.j.kumar\\AppData\\Local\\Temp\\ipykernel_11284\\1361366100.py:27: DeprecationWarning: Received 'size' via a specific parameter in the presence of a 'body' parameter, which is deprecated and will be removed in a future version. Instead, use only 'body' or only specific parameters.\n",
+      "C:\\Users\\surendra.j.kumar\\AppData\\Local\\Temp\\ipykernel_11284\\2868910912.py:26: DeprecationWarning: Received 'size' via a specific parameter in the presence of a 'body' parameter, which is deprecated and will be removed in a future version. Instead, use only 'body' or only specific parameters.\n",
       "  response = es.search(index=index_name, body=query, size=1)\n"
      ]
     },
@@ -1558,7 +1563,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Predicted SLA Breach Time: 1 hours\n"
+      "Predicted SLA Breach Time: 0 hours\n"
      ]
     },
     {
@@ -1571,7 +1576,7 @@
     }
    ],
    "source": [
-    "print(predict_sla_breach(\"INC7381518\", model, label_encoders))"
+    "print(predict_sla_breach(\"INC7428098\", model, label_encoders))"
    ]
   },
   {
